--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -98,6 +98,11 @@ h1.product-name
     .add-to-cart-button
       max-width: 100%
 
+  select span, select span option
+    display: none
+    opacity: 0
+    visibility: hidden
+
 .product-quantity
   display: none
 
@@ -117,7 +122,6 @@ h1.product-name
   &:hover, &:active
     box-shadow: 0px 15px 15px -10px rgba(0,0,0,0.4)
     +transform(scale(1.02, 1.02))
-
 
 .product-option-selection-button
   +all-transitions
