--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -552,6 +552,9 @@ footer
       background-color: #FFF
       color: #000
 
+      &:disabled
+        color: graytext
+
     &:focus
       box-shadow: none
       outline: none
@@ -574,6 +577,9 @@ footer
 
     select
       color: $text-color
+
+      option:disabled
+        color: graytext
 
     svg
       fill: $text-color
