--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -90,6 +90,19 @@ a, a:visited
   text-align: center
   width: 100%
 
+  &.minimal-button
+    background: none
+    color: $text-color
+    border: none
+    font-size: 13px
+    padding: 0
+
+    &:not(:disabled):hover, &:not(:disabled):active, &:not(:disabled):focus
+      +transform(none)
+      box-shadow: none
+      background: none
+      text-decoration: underline
+
   &:disabled, &.disabled
     cursor: not-allowed
     opacity: .3
@@ -98,7 +111,7 @@ a, a:visited
     display: block
     margin: 60px auto
 
-  &:active, &:focus, &:hover
+  &:not(:disabled):hover, &:not(:disabled):active, &:not(:disabled):focus
     box-shadow: 0px 15px 15px -10px rgba(0,0,0,0.4)
     +transform(scale(1.02, 1.02))
 
