Instant checkout updates
This adds theme styling for the instant checkout button for Sunscreen

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -144,3 +144,6 @@ button.reset-selection-button
   font-size: 25px
   margin-bottom: 40px
   text-align: center
+
+#instant-checkout-button
+  margin-top: 12px
