--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -1,7 +1,7 @@
 @import 'flexbox'
 
-
 $text-color: #{"{{ theme.text_color }}"}
+$link-hover-color: #{"{{ theme.link_hover_color }}"}
 $background-color: #{"{{ theme.background_color }}"}
 $accent-color: #{"{{ theme.accent_color }}"}
 $welcome-header-text-color: #{"{{ theme.welcome_header_text_color }}"}
@@ -33,7 +33,6 @@ $primary-font: #{"{{ theme.primary_font | font_family }}"}
 
 @mixin appearance($str...)
   -webkit-appearance: none
-  -moz-appearance: none
   appearance: none
 
 @mixin keyframes($animation...)
