--- a/source/theme.css
+++ b/source/theme.css
@@ -1,5 +1,6 @@
 //= require_directory ./stylesheets/vendor
 //= require stylesheets/layout
+//= require stylesheets/navigation
 //= require stylesheets/home
 //= require stylesheets/products
 //= require stylesheets/product
