Various font sizing tweaks

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -31,7 +31,7 @@
     display: table
 
   @media screen and (max-width: $break-small)
-    padding: 0 50px
+    padding: 0 20px
 
   &.inactive
     .product-page-titles
@@ -57,21 +57,17 @@ h1.product-name
   margin-bottom: 8px
   text-align: left
 
-.product-page-price
-  font-size: 15px
-
 .product-description
   clear: left
   float: left
   font-size: 20px
-  line-height: 32px
+  line-height: 1.5em
   margin-top: 30px
   max-width: calc(100% - 375px)
 
   @media screen and (max-width: $break-small)
     float: none
-    font-size: 18px
-    line-height: 28px
+    font-size: 16px
     max-width: 100%
 
   ul, ol
@@ -108,6 +104,7 @@ h1.product-name
 
 button.reset-selection-button
   display: none
+  font-size: 14px
   height: auto
   max-width: 100%
   line-height: normal
