--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -1,6 +1,12 @@
 @import 'variables'
 
 .empty-cart-message
+  display: none
+
+  .empty-cart &
+    display: block
+
+.empty-cart-message
   font-size: 20px
   text-align: center
 
@@ -21,7 +27,7 @@
   @media screen and (max-width: $break-small)
     +align-items(flex-start)
     +flex-wrap(wrap)
-    padding: 20px 0
+    padding: 30px 0
 
 .cart-item-remove
   margin-right: 25px
@@ -49,16 +55,32 @@
     height: 80px
     max-width: 80px
 
+.cart-item-details-quantity-price
+  +flexbox
+  +align-items(center)
+  width: 100%
+
+  @media screen and (max-width: $break-small)
+    +flex-direction(column)
+    width: calc(100% - 135px)
+
+.cart-item-details-unit-price
+  margin-top: 10px
+
 .cart-item-details
   max-width: 300px
   width: 100%
 
-  @media screen and (max-width: $break-small)
-    +flex-basis(calc(100% - 135px))
-
 .cart-item-details-name
   font-size: 18px
-  margin-bottom: 8px
+  margin-bottom: 10px
+
+.cart-item-quantity-price
+  +flexbox
+  width: 100%
+
+  @media screen and (max-width: $break-small)
+    margin-top: 20px
 
 .cart-item-details-price
   margin-left: auto
@@ -69,8 +91,8 @@
   width: 60px
 
   @media screen and (max-width: $break-small)
-    margin-left: 135px
     width: 40px
+    margin-left: 0
 
   input
     border-bottom: 1px solid $text-color
