--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -153,72 +153,19 @@ h1
   line-height: 50px
   margin-bottom: 55px
 
-@keyframes showErrors
-  from
-    opacity: 0
-
-  to
-    opacity: 1
-
-.error-modal
+.error-container
   +flexbox
   +justify-content(center)
   +align-items(center)
-  bottom: 0
-  height: 100%
+  background-color: $accent-color
   padding: 20px
-  position: fixed
-  top: 0
-  left: 0
-  right: 0
-  width: 100%
-  z-index: 30
-
-  .error-background
-    background-color: $background-color
-    bottom: 0
-    height: 100%
-    left: 0
-    opacity: .8
-    position: absolute
-    right: 0
-    top: 0
-    width: 100%
-
-  .error-container
-    animation: showErrors .2s
-    box-shadow: 0px 10px 40px -10px rgba(0,0,0,0.2)
-    background-color: $background-color
-    max-width: 600px
-    padding: 50px 100px
-    position: relative
-    text-align: center
-    width: 100%
-
-    @media screen and (max-width: $break-small)
-      padding: 50px
+  margin: 0 auto 30px
+  max-width: 760px
 
   .error-list
     list-style: none
     margin: 0
     padding: 0
-
-  .close-errors
-    cursor: pointer
-    padding: 2px
-    position: absolute
-    right: 20px
-    top: 20px
-
-    svg
-      display: block
-      height: 16px
-      fill: $text-color
-      width: 16px
-
-    &:hover, &:focus
-      svg
-        fill: $link-hover-color
 
 .wrapper
   margin: 0 auto
@@ -226,8 +173,14 @@ h1
   padding: 0 20px
   width: 100%
 
-#home .content .wrapper, #product .content .wrapper
+#home .content .wrapper
   padding: 0
+
+#product .content .wrapper
+  padding: 0 20px
+
+  @media screen and (max-width: $break-small)
+    padding: 0
 
 #cart .content .wrapper, #contact .content .wrapper
   padding: 0 20px
@@ -260,6 +213,7 @@ h1
 .lookbook-gallery-image
   display: block
   margin-bottom: 50px
+  width: 100%
 
   &:last-child
     margin-bottom: 0
@@ -308,21 +262,29 @@ a.store-link
     @media screen and (max-width: $break-small)
       padding: 10px 10px
 
+.dropdown-search
+
+  &:hover, &:focus, &:focus-within
+    background-color: $accent-color
+
 .search-form
   +flexbox
   +justify-content(center)
   +align-items(center)
   cursor: pointer
-  height: 67px
-  line-height: 20px
+  height: 60px
+  margin: 0 auto
   padding: 0 30px
+  position: relative
+  width: 235px
 
   input
     border: 0
-    background-color: $background-color
+    background-color: none
     color: $text-color
-    padding: 4px
+    padding: 6px
     text-align: center
+    width: 150px
 
     &::-webkit-input-placeholder
       color: $text-color
@@ -334,11 +296,22 @@ a.store-link
       color: $text-color
 
   button.search-button
+    +transform(translateY(-50%))
     background: none
     border: none
-    margin-right: 5px
-    padding: 2px
+    padding: 6px
+    position: absolute
+    right: 10px
+    top: 50%
     width: auto
+
+    svg
+      display: block
+      fill: $text-color
+
+    &:hover, &:focus
+      svg
+        fill: $link-hover-color
 
 .cart-item-count
   font-size: 15px
@@ -346,7 +319,7 @@ a.store-link
   position: absolute
   right: -18px
   text-align: left
-  top: -6px
+  top: -4px
 
   @media screen and (max-width: $break-small)
     right: -20px
@@ -436,17 +409,10 @@ footer
     z-index: 2
 
     option
-      background-color: #FFF
       color: #000
-
-      &:disabled
-        color: graytext
 
     &:focus
       box-shadow: none
-
-    &::-ms-expand
-      display: none
 
   svg
     +all-transitions
