--- a/source/stylesheets/navigation.sass
+++ b/source/stylesheets/navigation.sass
@@ -9,7 +9,7 @@
   list-style: none
 
 .nav
-  +flexbox
+  +inline-flex
   +align-items(center)
   +justify-content(center)
 
@@ -26,16 +26,6 @@
     position: relative
     text-decoration: none
 
-    .hover-underline
-      border-bottom: 2px solid blue
-      border-color: transparent
-      font-size: 20px
-      padding-right: 24px
-      padding-bottom: 8px
-
-      &.no-underline
-        padding-right: 0
-
 .horizontal-nav-links
   +transform-origin(100% 0%)
   +transform(translateX(-50%) scaleY(0.75))
@@ -47,7 +37,6 @@
   max-height: 500px
   opacity: 0
   overflow-y: scroll
-  padding: 8px
   position: absolute
   top: 100%
   z-index: 0
@@ -62,7 +51,7 @@
     max-height: 100vh
     max-width: 100%
     padding-bottom: 140px
-    padding-top: 40px
+    padding-top: 75px
     position: fixed
     top: 0
     width: 100%
@@ -76,13 +65,16 @@
     +transition(.1s linear all)
     color: $text-color
     display: block
-    padding: 16px 8px
+    padding: 20px 10px
     text-decoration: none
 
     @media screen and (max-width: $break-small)
-      padding: 16px 60px
+      padding: 20px 60px
 
-    &:hover, &:focus
+  &:hover, &:focus
+    background-color: $accent-color
+
+    a
       color: $link-hover-color
       text-decoration: underline
 
@@ -103,7 +95,6 @@ ul.show-menu
     +transform(none)
 
 .close-nav-menu
-  background: red
   display: none
   padding: 10px
   position: fixed
