Improve product page sizing

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -1,8 +1,9 @@
 @import 'variables'
 
+
 .product-page-content
   margin: 0 auto
-  max-width: 754px
+  max-width: 800px
   width: 100%
 
 .primary-product-image-container
@@ -44,7 +45,7 @@
 
 .product-page-titles
   float: left
-  max-width: calc(100% - 375px)
+  max-width: calc(100% - 350px)
   width: 100%
 
   @media screen and (max-width: $break-small)
@@ -63,7 +64,7 @@ h1.product-name
   font-size: 20px
   line-height: 1.5em
   margin-top: 30px
-  max-width: calc(100% - 375px)
+  max-width: calc(100% - 350px)
 
   @media screen and (max-width: $break-small)
     float: none
@@ -81,7 +82,7 @@ h1.product-name
 
 .product-form
   float: right
-  max-width: 300px
+  max-width: 290px
   width: 100%
 
   @media screen and (max-width: $break-small)
@@ -144,3 +145,6 @@ button.reset-selection-button
 
 #instant-checkout-button
   margin-top: 12px
+
+.similar-product-list
+  margin-bottom: 0
