Misc accessibility enhancements

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -336,6 +336,9 @@ header, footer
 footer
   padding: 100px 0
 
+  @media screen and (max-width: $break-small)
+    padding: 75px 0
+
 .footer-store-name
   font-size: 20px
   line-height: 30px
