--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -7,6 +7,10 @@ $accent-color: #{"{{ theme.accent_color }}"}
 $welcome-header-text-color: #{"{{ theme.welcome_header_text_color }}"}
 $shop-name-text-color: #{"{{ theme.shop_name_text_color }}"}
 
+$button-text-color: #{"{{ theme.button_text_color }}"}
+$button-background-color: #{"{{ theme.button_background_color }}"}
+$button-hover-background-color: #{"{{ theme.button_hover_background_color }}"}
+
 $break-extra-large: 1500px
 $break-large: 1200px
 $break-medium: 1023px
