--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -23,37 +23,29 @@ body
     position: relative
 
   &.maintenance-page
+    padding-top: 75px
 
     .maintenance-content
       +flexbox
       +align-items(center)
-      +justify-content(center)
+      +justify-content(flex-start)
       +flex-direction(column)
       height: 100%
       position: relative
       text-align: center
 
     h1
-      font-size: 50px
-      position: absolute
-      top: 100px
-
-      @media screen and (max-width: $break-small)
-        top: 50px
+      font-size: 36px
+      margin-bottom: 40px
 
     p
-      font-size: 40px
-
-      @media screen and (max-width: $break-small)
-        font-size: 18px
+      font-size: 20px
+      margin-bottom: 40px
 
     .maintenance-social-links
-      font-size: 25px
+      font-size: 16px
       margin: 0
       padding: 0
-
-      @media screen and (max-width: $break-small)
-        font-size: 15px
 
       li
         display: inline-block
@@ -103,9 +95,9 @@ button, input, textarea, select
   padding: 0
 
 .button, a.button
-  +transition(background-color .2s linear, color .2s linear, transform .2s linear)
-  background-color: $text-color
-  color: $background-color
+  +transition(all .2s linear)
+  background-color: $button-background-color
+  color: $button-text-color
   height: 60px
   line-height: 60px
   max-width: 275px
@@ -137,9 +129,10 @@ button, input, textarea, select
     margin: 60px auto
 
   &:not(:disabled):hover, &:not(:disabled):active, &:not(:disabled):focus
-    box-shadow: 0px 15px 15px -10px rgba(0,0,0,0.4)
+    background-color: $button-hover-background-color
     +transform(scale(1.02, 1.02))
-    color: $background-color
+    color: $button-text-color
+
 
 h1, h2, h3, h4, h5, h6
   color: $text-color
