--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -35,14 +35,22 @@
 
   @media (hover: hover), (-moz-touch-enabled: 0)
     &:hover
+      .product-list-thumb-name
+        text-decoration: underline
+
       .show-secondary
         .product-list-image:first-child
+          display: none
           opacity: 0
           visibility: hidden
 
         .product-list-image:last-child
+          display: block
           opacity: 1
           visibility: visible
+
+_:-ms-fullscreen, :root .product-list-thumb
+  +flex-basis(auto)
 
 .product-list-thumb-container
   position: relative
@@ -60,50 +68,74 @@
     padding-bottom: 0
 
 .product-list-image
+  +transition(filter .15s ease-in)
   display: block
+  left: 0
   overflow: hidden
+  position: absolute
+  top: 0
 
   &.lazy
     filter: blur(5px)
 
   .default &
+    position: relative
     width: 100%
 
   .crop-to-square &
     height: 100% !important
+    left: 0
     object-fit: cover
     position: absolute
+    top: 0
     width: 100%
 
   .fit-to-square &
-    +transform(translate3d(-50%,-50%,0))
+    left: auto
+    will-change: transform
     cursor: pointer
-    left: 50%
     position: absolute
-    top: 50%
     max-width: 100%
     height: 100%
+    top: 0
     width: 100%
 
     &.image-tall
       height: 100%
+      left: auto
       width: auto
 
     &.image-wide
       height: auto
+      top: auto
       width: 100%
 
     &.image-square
       height: 100%
+      left: 0
       width: 100%
 
   &:last-child
+    +transition(none)
+    display: none
     opacity: 0
     visibility: hidden
 
   &:only-child
+    display: block
     opacity: 1
     visibility: visible
+
+.image-wrapper
+  +flexbox
+  +align-items(center)
+  +justify-content(center)
+  height: 100%
+  position: absolute
+  width: 100%
+
+  .default &
+    position: relative
 
 .product-list-thumb-info
   font-size: 20px
@@ -120,11 +152,8 @@
   overflow-wrap: break-word
 
 .product-list-thumb-price
-  font-size: .75em
-  margin-top: 8px
-
-  @media screen and (max-width: $break-small)
-    margin-top: 5px
+  font-size: 16px
+  margin-top: 4px
 
 .pagination
   +flexbox
