--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -40,12 +40,10 @@
 
       .show-secondary
         .product-list-image:first-child
-          display: none
           opacity: 0
           visibility: hidden
 
         .product-list-image:last-child
-          display: block
           opacity: 1
           visibility: visible
 
@@ -68,7 +66,7 @@ _:-ms-fullscreen, :root .product-list-thumb
     padding-bottom: 0
 
 .product-list-image
-  +transition(filter .15s ease-in)
+  +transition(all .05s ease-in)
   display: block
   left: 0
   overflow: hidden
@@ -115,14 +113,12 @@ _:-ms-fullscreen, :root .product-list-thumb
       left: 0
       width: 100%
 
-  &:last-child
-    +transition(none)
-    display: none
+  &:nth-child(2)
     opacity: 0
+    position: absolute
     visibility: hidden
 
   &:only-child
-    display: block
     opacity: 1
     visibility: visible
 
