--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -41,16 +41,16 @@
       font-size: 20px
       padding-top: 20px
 
-  &.contact-send
+  .send-message-button
     margin-top: 100px
 
     @media screen and (max-width: $break-small)
       margin-top: 50px
+      max-width: 100%
 
 .focused .contact-form-label
   transform: translateY(-125%)
-  font-size: 15px
-  opacity: .6
+  font-size: 16px
 
 #captcha_image
   position: absolute
