--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -3,10 +3,12 @@
 .home-welcome
   color: $welcome-header-text-color
   margin-bottom: 100px
+  padding: 0 20px
   position: relative
 
   @media screen and (max-width: $break-small)
     margin-bottom: 50px
+    padding: 0
 
 .welcome-message
   font-size: 50px
@@ -27,7 +29,7 @@
 .welcome-image
   display: block
   margin: 0 auto
-  max-width: 100%
+  width: 100%
 
 .featured-category
   +flexbox
@@ -63,6 +65,7 @@
   margin-bottom: 30px
 
 .featured-category-button
+  font-size: 16px
   max-width: 275px
   position: relative
   width: 100%
