--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -1,11 +1,15 @@
 @import 'flexbox'
 
-
 $text-color: #{"{{ theme.text_color }}"}
+$link-hover-color: #{"{{ theme.link_hover_color }}"}
 $background-color: #{"{{ theme.background_color }}"}
 $accent-color: #{"{{ theme.accent_color }}"}
 $welcome-header-text-color: #{"{{ theme.welcome_header_text_color }}"}
 $shop-name-text-color: #{"{{ theme.shop_name_text_color }}"}
+
+$button-text-color: #{"{{ theme.button_text_color }}"}
+$button-background-color: #{"{{ theme.button_background_color }}"}
+$button-hover-background-color: #{"{{ theme.button_hover_background_color }}"}
 
 $break-extra-large: 1500px
 $break-large: 1200px
@@ -33,7 +37,6 @@ $primary-font: #{"{{ theme.primary_font | font_family }}"}
 
 @mixin appearance($str...)
   -webkit-appearance: none
-  -moz-appearance: none
   appearance: none
 
 @mixin keyframes($animation...)
