--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -1,8 +1,9 @@
 @import 'variables'
 
+
 .product-page-content
   margin: 0 auto
-  max-width: 754px
+  max-width: 800px
   width: 100%
 
 .primary-product-image-container
@@ -31,7 +32,7 @@
     display: table
 
   @media screen and (max-width: $break-small)
-    padding: 0 50px
+    padding: 0 20px
 
   &.inactive
     .product-page-titles
@@ -44,7 +45,7 @@
 
 .product-page-titles
   float: left
-  max-width: calc(100% - 375px)
+  max-width: calc(100% - 350px)
   width: 100%
 
   @media screen and (max-width: $break-small)
@@ -57,21 +58,17 @@ h1.product-name
   margin-bottom: 8px
   text-align: left
 
-.product-page-price
-  font-size: 15px
-
 .product-description
   clear: left
   float: left
   font-size: 20px
-  line-height: 32px
+  line-height: 1.5em
   margin-top: 30px
-  max-width: calc(100% - 375px)
+  max-width: calc(100% - 350px)
 
   @media screen and (max-width: $break-small)
     float: none
-    font-size: 18px
-    line-height: 28px
+    font-size: 16px
     max-width: 100%
 
   ul, ol
@@ -85,7 +82,7 @@ h1.product-name
 
 .product-form
   float: right
-  max-width: 300px
+  max-width: 290px
   width: 100%
 
   @media screen and (max-width: $break-small)
@@ -108,6 +105,7 @@ h1.product-name
 
 button.reset-selection-button
   display: none
+  font-size: 14px
   height: auto
   max-width: 100%
   line-height: normal
@@ -126,7 +124,7 @@ button.reset-selection-button
 
 .similar-products
   background-color: $accent-color
-  margin-top: 200px
+  margin-top: 100px
   padding: 100px 0
 
   .similar-product
@@ -147,3 +145,6 @@ button.reset-selection-button
 
 #instant-checkout-button
   margin-top: 12px
+
+.similar-product-list
+  margin-bottom: 0
