--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -1,106 +1,171 @@
 @import 'variables'
 
+.product-list-container
+  position: relative
+
+#home .product-list-container
+  padding: 0 20px
+
 .product-list
   +flexbox
   +flex-wrap(wrap)
-  +justify-content(center)
-  font-size: 20px
-  margin: 0 -10px
+  +justify-content(flex-start)
+  margin: 20px -20px
 
   @media screen and (max-width: $break-small)
-    +justify-content(flex-start)
+    margin: 20px -10px
     width: auto
 
-@media screen and (max-width: 1280px)
-  #home .product-list
-    padding: 0 20px
-
-.product-list-item
-  display: inline-block
-  padding-bottom: 80px
+.product-list-thumb
+  +flex-basis(calc(100% / #{"{{ theme.max_products_per_row }}"}))
+  color: $text-color
+  display: block
+  font-size: 0
+  padding: 20px
+  padding-bottom: 20px
   position: relative
+  text-decoration: none
   vertical-align: middle
-  text-align: center
-  width: #{"{% if theme.max_products_per_row == 4 %} 25% {% elsif theme.max_products_per_row == 3 %} 33.33% {% elsif theme.max_products_per_row == 2 %} 50% {% else %} 100% {% endif %}"}
+  width: calc(100% / #{"{{ theme.max_products_per_row }}"})
 
   @media screen and (max-width: $break-small)
-    padding: 0 10px 50px 10px
-    width: #{"{% if theme.max_products_per_row_mobile == 2 %} 50% {% else %} 100% {% endif %}"}
+    +flex-basis(calc(100% / #{"{{ theme.max_products_per_row_mobile }}"}))
+    padding: 10px
+    width: calc(100% / #{"{{ theme.max_products_per_row_mobile }}"})
 
-.product-list-item-container
-  cursor: default
-  display: inline-block
-  padding-bottom: 100%
+  @media (hover: hover), (-moz-touch-enabled: 0)
+    &:hover
+      .product-list-thumb-name
+        text-decoration: underline
+
+      .show-secondary
+        .product-list-image:first-child
+          opacity: 0
+          visibility: hidden
+
+        .product-list-image:last-child
+          opacity: 1
+          visibility: visible
+
+_:-ms-fullscreen, :root .product-list-thumb
+  +flex-basis(auto)
+
+.product-list-thumb-container
   position: relative
   width: 100%
 
 .product-list-image-container
   font-size: 0
+  margin: 0
+  overflow: hidden
+  padding-bottom: 100%
+  position: relative
   width: 100%
 
-@media (hover: hover), (-moz-touch-enabled: 0)
-  .show-secondary:hover
-    .product-list-image:first-child
-      opacity: 0
-
-    .product-list-image:last-child
-      opacity: 1
+  .default &
+    padding-bottom: 0
 
 .product-list-image
-  +transition(all 0.2s cubic-bezier(0.5, 0, 0, 1.25))
-  +transform(translate3d(-50%,-50%,0))
-  cursor: pointer
-  left: 50%
+  +transition(all .05s ease-in)
+  display: block
+  left: 0
+  overflow: hidden
   position: absolute
-  top: 50%
-  max-width: 100%
+  top: 0
 
-  &.image-tall
-    height: calc(100% - 60px)
-    width: auto
+  &.lazy
+    filter: blur(5px)
 
-  &.image-wide
-    height: auto
-    width: calc(100% - 60px)
+  .default &
+    position: relative
+    width: 100%
 
-  &.image-square
-    height: calc(100% - 20px)
-    width: calc(100% - 20px)
+  .crop-to-square &
+    height: 100% !important
+    left: 0
+    object-fit: cover
+    position: absolute
+    top: 0
+    width: 100%
 
-  &:last-child
+  .fit-to-square &
+    left: auto
+    will-change: transform
+    cursor: pointer
+    position: absolute
+    max-width: 100%
+    height: 100%
+    top: 0
+    width: 100%
+
+    &.image-tall
+      height: 100%
+      left: auto
+      width: auto
+
+    &.image-wide
+      height: auto
+      top: auto
+      width: 100%
+
+    &.image-square
+      height: 100%
+      left: 0
+      width: 100%
+
+  &:nth-child(2)
     opacity: 0
+    position: absolute
+    visibility: hidden
 
   &:only-child
     opacity: 1
+    visibility: visible
 
-.product-list-item-name
+.image-wrapper
+  +flexbox
+  +align-items(center)
+  +justify-content(center)
+  height: 100%
+  position: absolute
+  width: 100%
+
+  .default &
+    position: relative
+
+.product-list-thumb-info
   font-size: 20px
-  line-height: 30px
-  margin-bottom: 5px
-  padding: 0 20px
+  line-height: 1.25em
+  padding: 20px 0
+  position: relative
+  text-align: center
 
   @media screen and (max-width: $break-small)
-    font-size: #{"{% if theme.max_products_per_row_mobile == 2 %} 18px {% else %} 20px {% endif %}"}
-    line-height: #{"{% if theme.max_products_per_row_mobile == 2 %} 26px {% else %} 30px {% endif %}"}
-    padding: 0 8px
+    font-size: 18px
+    padding: 10px 0
 
-.product-list-item-price
-  font-size: 15px
+.product-list-thumb-name
+  overflow-wrap: break-word
+
+.product-list-thumb-price
+  font-size: 16px
+  margin-top: 4px
 
 .pagination
   +flexbox
   +justify-content(center)
   color: $text-color
-  font-size: 15px
+  font-size: 18px
+  line-height: 1.5em
   margin: 50px auto 0
-  max-width: 375px
+  max-width: 225px
   position: relative
   text-align: center
   width: 100%
 
 .pagination-link
   +transform(translateY(-50%))
-  padding: 2px 10px
+  padding: 10px
   position: absolute
   top: 50%
 
@@ -110,13 +175,18 @@
   &.next-link
     right: 0
 
+  &:hover, &:focus
+    .pagination-arrow
+      fill: $link-hover-color
+
 .pagination-arrow
+  display: block
   fill: $text-color
+  height: 17px
+  width: 17px
 
   &.prev-arrow
-    +transform(rotate(90deg))
     margin-right: auto
 
   &.next-arrow
-    +transform(rotate(-90deg))
     margin-left: auto
