Add maintenance message setting

--- a/source/theme.css
+++ b/source/theme.css
@@ -1,3 +1,4 @@
+/*
 //= require_directory ./stylesheets/vendor
 //= require stylesheets/layout
 //= require stylesheets/navigation
@@ -6,3 +7,5 @@
 //= require stylesheets/product
 //= require stylesheets/contact
 //= require stylesheets/cart
+//= require stylesheets/maintenance
+*/
