Add new powered by

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -303,6 +303,29 @@ footer
 .footer-store-credit
   font-size: 14px
 
+.bigcartel-credit
+  line-height: 1em
+  font-size: 15px
+  display: inline-flex
+  align-items: center
+  gap: 8px
+  outline-offset: 4px
+  padding: 2px 0
+  text-decoration: none
+  margin-top: 30px
+
+  &:hover
+    text-decoration: none
+
+  &__text
+    position: relative
+
+  &__lockup
+    display: block
+    fill: currentColor
+    padding-top: 1px
+    width: 80px
+
 .flash-message
   display: none
 
