--- a/source/theme.css
+++ b/source/theme.css
@@ -1,11 +1,7 @@
 /*
-//= require_directory ./stylesheets/vendor
-//= require stylesheets/layout
-//= require stylesheets/navigation
-//= require stylesheets/home
-//= require stylesheets/products
-//= require stylesheets/product
-//= require stylesheets/contact
-//= require stylesheets/cart
-//= require stylesheets/maintenance
-*/
+ *= require_directory ./stylesheets/vendor
+ *= require stylesheets/all
+ */
+/*============================================================
+  Custom Styles - add and override styles below.
+============================================================*/
