Product grid updates
- Lazy load products
- Add featured header setting
- Add setting for showing related products

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -116,29 +116,15 @@ button.reset-selection-button
 .all-similar-products
   display: none
 
-.similar-products
+.related-products-container
   background-color: $accent-color
   margin-top: 100px
   padding: 100px 0
 
-  .similar-product
-    width: 33.33%
-
-  @media screen and (max-width: $break-medium)
-    margin-top: 50px
-    padding: 50px 20px
-
-    .similar-product
-      padding-bottom: 50px
-      width: 100%
-
-.similar-products-header
+.related-products-title
   font-size: 25px
   margin-bottom: 40px
   text-align: center
 
 #instant-checkout-button
   margin-top: 12px
-
-.similar-product-list
-  margin-bottom: 0
