--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -16,6 +16,9 @@
   --announcement-background-color: #{'{{ theme.accent_background_color }}'}
   --announcement-text-color: #{'{{ theme.text_color }}'}
 
+  --product-status-background-color: var(--background-color)
+  --product-status-text-color: var(--text-color)
+
   --border-radius: 0
   --border-radius-sm: 2px
 
@@ -142,18 +145,6 @@ h1
 #main
   flex: 1
   padding-bottom: 40px
-
-#home .content .wrapper
-  padding: 0
-
-#product .content .wrapper
-  padding: 0 20px
-
-  @media screen and (max-width: $break-small)
-    padding: 0
-
-#cart .content .wrapper, #contact .content .wrapper
-  padding: 0 20px
 
 .custom-content
   font-size: 20px
