--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -1,182 +1,162 @@
-.product-list-container
-  position: relative
-
-#home .product-list-container
-  padding: 0 20px
-
 .product-list
-  +flexbox
-  +flex-wrap(wrap)
-  +justify-content(flex-start)
-  margin: 20px -20px
+  --gap: calc(var(--spacing-unit) * 4)
+  --row-gap: 48px
+  --columns: #{"{{ theme.max_products_per_row }}"}
+  --spacing-unit: 8px
+  display: flex
+  flex-wrap: wrap
+  justify-content: flex-start
+  margin: var(--spacing-unit) 0 0
+  gap: var(--gap)
+  row-gap: var(--row-gap)
+  margin-top: 36px
+
+  &--center
+    justify-content: center
+
+  @media screen and (max-width: $break-large)
+    --columns: calc(#{"{{ theme.max_products_per_row }}"} - 1)
 
   @media screen and (max-width: $break-small)
-    margin: 20px -10px
-    width: auto
+    --columns: #{"{{ theme.max_products_per_row_mobile }}"}
+    --gap: calc(var(--spacing-unit) * 2)
+    justify-content: flex-start
 
 .product-list-thumb
-  +flex-basis(calc(100% / #{"{{ theme.max_products_per_row }}"}))
-  color: $text-color
-  display: block
-  font-size: 0
-  padding: 20px
-  padding-bottom: 20px
   position: relative
   text-decoration: none
-  vertical-align: middle
-  width: calc(100% / #{"{{ theme.max_products_per_row }}"})
+  width: calc((100% / var(--columns)) - var(--gap) + (var(--gap) / var(--columns)))
 
-  @media screen and (max-width: $break-small)
-    +flex-basis(calc(100% / #{"{{ theme.max_products_per_row_mobile }}"}))
-    padding: 10px
-    width: calc(100% / #{"{{ theme.max_products_per_row_mobile }}"})
+a.product-list-link
+  text-decoration: none
+  outline-offset: 4px
+  position: relative
 
-  @media (hover: hover), (-moz-touch-enabled: 0)
+  @media (hover: hover)
     &:hover
       .product-list-thumb-name
         text-decoration: underline
 
-      .show-secondary
-        .product-list-image:first-child
+    &--show-secondary
+      .product-list-image
+        transition: opacity .2s linear, visibility .2s linear
+
+      &:hover
+        .product-list-image--primary
           opacity: 0
           visibility: hidden
 
-        .product-list-image:last-child
+        .product-list-image--secondary
           opacity: 1
           visibility: visible
 
-_:-ms-fullscreen, :root .product-list-thumb
-  +flex-basis(auto)
-
-.product-list-thumb-container
-  position: relative
-  width: 100%
+  .product-list-image--secondary
+    opacity: 0
+    visibility: hidden
 
 .product-list-image-container
-  font-size: 0
+  border-radius: var(--border-radius)
   margin: 0
   overflow: hidden
   padding-bottom: 100%
   position: relative
   width: 100%
 
-  .default &
+  &-default
     padding-bottom: 0
 
 .product-list-image
-  +transition(all .05s ease-in)
-  display: block
-  left: 0
-  overflow: hidden
+  border-radius: var(--border-radius)
+  transform: translate3d(0, 0, 0)
   position: absolute
   top: 0
-
-  .default &
-    position: relative
-    width: 100%
-
-  .crop-to-square &
-    height: 100% !important
-    left: 0
-    object-fit: cover
-    position: absolute
-    top: 0
-    width: 100%
-
-  .fit-to-square &
-    left: auto
-    will-change: transform
-    cursor: pointer
-    position: absolute
-    max-width: 100%
-    height: 100%
-    top: 0
-    width: 100%
-
-    &.image-tall
-      height: 100%
-      left: auto
-      width: auto
-
-    &.image-wide
-      height: auto
-      top: auto
-      width: 100%
-
-    &.image-square
-      height: 100%
-      left: 0
-      width: 100%
-
-  &:nth-child(2)
-    opacity: 0
-    position: absolute
-    visibility: hidden
-
-  &:only-child
-    opacity: 1
-    visibility: visible
-
-.image-wrapper
-  +flexbox
-  +align-items(center)
-  +justify-content(center)
-  height: 100%
-  position: absolute
+  left: 0
   width: 100%
+  height: 100%
+  transition: transform 0.3s ease-in-out
+  z-index: 1
 
-  .default &
+  &.grid-default
     position: relative
+
+  &.grid-cover
+    object-fit: cover
+
+  &.grid-contain
+    object-fit: contain
+
+.product-list-thumb-status
+  background: var(--product-status-background-color)
+  border-radius: var(--border-radius)
+  color: var(--product-status-text-color)
+  top: 12px
+  right: 12px
+  font-size: .875rem
+  line-height: 1em
+  letter-spacing: 1.12px
+  font-weight: 500
+  position: absolute
+  text-transform: uppercase
+  padding: 6px
+  z-index: 2
 
 .product-list-thumb-info
-  font-size: 20px
-  line-height: 1.25em
-  padding: 20px 0
+  line-height: normal
+  padding: 16px 0 0
   position: relative
   text-align: center
-
-  @media screen and (max-width: $break-small)
-    font-size: 18px
-    padding: 10px 0
+  display: grid
+  gap: 8px
 
 .product-list-thumb-name
-  overflow-wrap: break-word
+  font-size: 1.25em
+  word-break: break-word
 
 .product-list-thumb-price
-  font-size: 16px
-  margin-top: 4px
+  font-size: .975rem
 
 .pagination
-  +flexbox
-  +justify-content(center)
-  color: $text-color
-  font-size: 18px
-  line-height: 1.5em
-  margin: 50px auto 0
-  max-width: 225px
+  display: flex
+  align-items: center
+  justify-content: center
+  color: var(--primary-text-color)
   position: relative
   text-align: center
   width: 100%
+  gap: 24px
+  line-height: 2em
+  margin-top: var(--margin-size)
 
-.pagination-link
-  +transform(translateY(-50%))
-  padding: 10px
-  position: absolute
-  top: 50%
+  .page-link
+    display: flex
+    align-items: center
+    gap: 12px
+    padding: 0 8px
 
-  &.prev-link
-    left: 0
+    &.disabled
+      display: none
 
-  &.next-link
-    right: 0
+    svg
+      width: 10px
+      height: 16px
 
-  &:hover, &:focus
-    .pagination-arrow
-      fill: $link-hover-color
+  .previous, .next
+    display: none
+
+.page-numbers
+  display: flex
+  gap: 24px
+
+  .current
+    text-underline-offset: 4px
+    text-decoration: underline
+
+  > a, span
+    padding: 0 8px
 
 .pagination-arrow
   display: block
-  fill: $text-color
+  fill: currentColor
   height: 17px
   width: 17px
 
